--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,3 @@
 TODO - [Doc]: Write docu to the function definitions in hgl_rand.h.
 TODO - [Test]: Write some tests for hgl_rand.
+TODO - [Build]: Move compiler warning flags to a variable.
