Added some string functionality

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,5 @@ TODO - [Doc]: Write docu to the function definitions in hgl_rand.h.
 TODO - [Test]: Write some tests for hgl_rand.
 TODO - [Build]: Move compiler warning flags to a variable.
 TODO - [Core]: Add functionality to parse string to int.
+TODO - [Build]: Add clean functionality.
+TODO - [Build]: Add run functionality.
