--- a/TODO.txt
+++ b/TODO.txt
@@ -4,3 +4,6 @@ TODO - [Build]: Move compiler warning flags to a variable.
 TODO - [Core]: Add functionality to parse string to int.
 TODO - [Build]: Add clean functionality.
 TODO - [Build]: Add run functionality.
+TODO - [Core]: Write docu to the function definitions in hgl_str.h.
+TODO - [Test]: Write some tests for hgl_str
+TODO - [Core]: Move hgl_str_int code to its own file. 
