--- a/TODO.txt
+++ b/TODO.txt
@@ -10,3 +10,4 @@ TODO - [Core]: Move hgl_str_int code to its own file.
 TODO - [Core]: Write docu to the function definitions in hgl_input.h.
 TODO - [Test]: Write some tests for hgl_input
 TODO - [Core]: Add localization strings.
+TODO - [Core]: Read configurations from file
